--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "gsap": "^3.14.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.2.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
